# pyx

./: .cvsignore  .gitignore  AUTHORS  CHANGES  INSTALL  INSTALL.md  MANIFEST.in  Makefile  README  README.md  TODO  __init__.py  attr.py  bitmap.py  canvas.py  canvasitem.py  color.py  config.py  connector.py  deco.py  deformer.py  dev_requirements.txt  document.py  epsfile.py  filelocator.py  mesh.py  normpath.py  path.py  pattern.py  pdfextra.py  pdfwriter.py  pswriter.py  pycompat.py  pyproject.toml  pyxrc  setup.cfg  setup.py  siteconfig.py  sourceforge  style.py  (+6 more)
contrib/: callingtex.py  color.cfg  dviconvert.py  dvips.py  dvitoany.py  dvitype.py  epstopng.py  graphics.cfg  imgconvert.py  pyx.def  textboxes.tex
data/: pyxrc
design/: .cvsignore  arg.tex  attributes  beziers.tex  beziertoline.py  boxalign.py  boxalign.tex  classtree.txt  global.tex  graph.txt  graphmax.gp  invalid1.py  invalid2.py  invalid3.py  invalid4.py  palettetest.py  protokoll-entwicklertreffen-april-2004.txt  protokoll-treffen-2006-07-21.txt  selfinter1.py  selfinter2.py  sourceforge
dvi/: dvifile.py  encfile.py  mapfile.py  texfont.py  tfmfile.py
examples/: .cvsignore  .gitignore  INDEX  Makefile  README  box.py  circles.py  connect.py  examples.py  hello.py  hello.txt  latex.py  mkipynb.py  pattern.py  sierpinski.py  tree.py  valign.py  vector.py
faq/: .cvsignore  Makefile  conf.py  general_aspects_plotting.rst  general_aspects_pyx.rst  glifaq.dtx  glifaq.ins  index.rst  other_plotting.rst  plotting_graphs.rst  python.rst  pyxfaq.tex  tex_latex.rst  tipa.py  tipa1.tex  tipa2.tex  tipa3.tex  unicode_text.rst
font/: __init__.py  _t1code.c  afmfile.py  font.py  metric.py  t1code.py  t1file.py
gallery/: .gitignore  INDEX  Makefile  README  mkipynb.py
graph/: data.py  graph.py  key.py  style.py
manual/: .cvsignore  .gitignore  .latex2html-init  Makefile  arct.py  arrows.py  axis.rst  (+81 more)
(+588 files in other folders)
